--- a/Texter/Texter.csproj
+++ b/Texter/Texter.csproj
@@ -19,6 +19,7 @@
     <PackageReference Include="System.Net.Sockets" Version="4.3.0" />
 	<PackageReference Include="RestSharp.NetCore" Version="105.2.3" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="1.1.2" />
   </ItemGroup>
 
   <ItemGroup>
