--- a/Texter/Texter.csproj
+++ b/Texter/Texter.csproj
@@ -47,6 +47,11 @@
     <Compile Remove="Migrations\20180123182731_AddMessageContactsManyToManyTables.cs" />
     <Compile Remove="Migrations\20180123185603_AddContactIdToMessage.Designer.cs" />
     <Compile Remove="Migrations\20180123185603_AddContactIdToMessage.cs" />
+    <Compile Remove="Migrations\20180123191903_AddContactIdToMessage.Designer.cs" />
+    <Compile Remove="Migrations\20180123191903_AddContactIdToMessage.cs" />
+    <Compile Remove="Migrations\20180123231710_AuthenticationDbCreation.Designer.cs" />
+    <Compile Remove="Migrations\20180123231710_AuthenticationDbCreation.cs" />
+    <Compile Remove="Migrations\ApplicationDbContextModelSnapshot.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Remove="Views\Home\Contact.cshtml" />
