--- a/Texter/Texter.csproj
+++ b/Texter/Texter.csproj
@@ -31,6 +31,8 @@
   <ItemGroup>
     <Folder Include="Models\" />
     <Folder Include="Views\Contact\" />
+    <Folder Include="Views\Account\" />
+    <Folder Include="ViewModels\" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Models\contacts.cs" />
@@ -55,5 +57,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Remove="Views\Home\Contact.cshtml" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Views\Index.cshtml" />
   </ItemGroup>
 </Project>
